syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.hzx.grpc.oss";
option java_outer_classname = "OssProto";

package objectStorageService;

service ObjectStorageService{
    rpc GetStream(ReqData) returns(stream RepData) {}
    rpc SetStream(stream ReqData) returns(RepData) {}
    rpc AllStream(stream ReqData) returns(stream RepData) {}
}

message ReqData {
    string data = 1 ;
}

message RepData {
    string data = 1 ;
}